[project]
name = "hackster"
version = "1.9.0"
description = "Awesome hackster created by Hack The Box"
requires-python = ">=3.13"
authors = [
    { name = "dimoschi", email = "dimos@hackthebox.eu" },
    { name = "makelarisjr", email = "makelarisjr@hackthebox.eu" },
    { name = "0xEmma", email = "emma@hackthebox.eu" },
]
maintainers = [
    { name = "dimoschi", email = "dimos@hackthebox.eu" },
    { name = "makelarisjr", email = "makelarisjr@hackthebox.eu" },
]
license = { text = "MIT" }

dependencies = [
    "aiodns>=3.0.0,<4.0.0",
    "arrow>=1.2.3,<2.0.0",
    "py-cord>=2.4.1,<3.0.0",
    "pydantic[dotenv]>=1.10.7,<2.0.0",
    "taskipy>=1.10.4,<2.0.0",
    "sqlalchemy[asyncio]>=2.0.9,<3.0.0",
    "bcrypt>=4.0.1,<5.0.0",
    "asyncmy>=0.2.7,<0.3.0",
    "fastapi>=0.120.3,<0.121.0",
    "sentry-sdk[sqlalchemy]>=2.8.0,<3.0.0",
    "alembic>=1.10.3,<2.0.0",
    "pymysql>=1.1.1,<2.0.0",
    "prometheus-client>=0.16.0,<0.17.0",
    "toml>=0.10.2,<0.11.0",
    "slack-sdk>=3.27.1,<4.0.0",
    "hypercorn>=0.17.3,<0.18.0",
    "audioop-lts>=0.2.2,<0.3.0",
    "aiohttp>=3.13.3",
    "urllib3>=2.6.3",
]

[dependency-groups]
dev = [
    "colorlog>=6.5.0,<7.0.0",
    "coverage>=7.2,<8.0.0",
    "flake8>=6.0,<7.0.0",
    "flake8-annotations>=3.0,<4.0.0",
    "flake8-bugbear>=23.3,<24.0.0",
    "flake8-docstrings>=1.6.0,<2.0.0",
    "flake8-isort>=6.0,<7.0.0",
    "flake8-string-format>=0.3.0,<0.4.0",
    "flake8-tidy-imports>=4.8.0,<5.0.0",
    "flake8-todo>=0.7,<0.8.0",
    "pep8-naming>=0.13,<0.14.0",
    "pre-commit>=3.2,<4.0.0",
    "pytest>=7.1.2,<8.0.0",
    "pytest-asyncio>=0.21,<0.22.0",
    "python-dotenv>=1.0,<2.0.0",
    "ipython>=8.12.0,<9.0.0",
    "ipdb>=0.13.13,<0.14.0",
    "aioresponses>=0.7.4,<0.8.0",
    "pytest-mock>=3.10.0,<4.0.0",
]

[tool.taskipy.tasks]
start = "python -m src"
test = "coverage run -m pytest tests/"
coverage = "coverage"
report = "coverage report"
lint = "pre-commit run --all-files"
precommit = "pre-commit install"

[tool.isort]
profile = "black"
line_length = 119
honor_noqa = true
skip_gitignore = true
